tests/ui/issues/issue-70381.stderr
error: 1 positional argument in format string, but no arguments were given
  --> $DIR/issue-70381.rs:4:16
   |
LL |   println!("\rยก{}")
   |                ^^

error: aborting due to 1 previous error

