tests/ui/issues/issue-70381.rs
// Test that multi-byte unicode characters with missing parameters do not ICE.

fn main() {
  println!("\rยก{}")
  //~^ ERROR 1 positional argument in format string
}
